assets/css/main.css
/* ... */
#footer .icons a:hover {
  color: #fff;
}

#footer .copyright {
  color: rgba(255, 255, 255, 0.5);
  font-size: 0.8em;
  letter-spacing: 0.225em;
  list-style: none;
  padding: 0;
  text-transform: uppercase;
}

#footer .copyright li {
  border-left: solid 1px rgba(255, 255, 255, 0.5);
  display: inline-block;
  line-height: 1em;
  margin-left: 1em;
  padding-left: 1em;
}

#footer .copyright li:first-child {
  border-left: 0;
  margin-left: 0;
  padding-left: 0;
}

#footer .copyright li a {
  color: inherit;
}

#footer .copyright li a:hover {
  color: #fff;
}

@media screen and (max-width: 480px) {
  #footer .copyright li {
    border: 0;
    display: block;
    line-height: 1.65em;
    margin: 0;
    padding: 0.5em 0;
  }
}

@media screen and (max-width: 980px) {
  #footer {
    padding: 4em 3em 2em 3em;
  }
}

@media screen and (max-width: 736px) {
  #footer {
    padding: 3em 2em 1em 2em;
  }
}

/* Landing */

body.landing #page-wrapper {
  background-image: -moz-linear-gradient(
      top,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../../images/banner.jpg");
  background-image: -webkit-linear-gradient(
      top,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../../images/banner.jpg");
  background-image: -ms-linear-gradient(
      top,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../../images/banner.jpg");
  background-image: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../../images/banner.jpg");
  background-attachment: fixed;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 0;
}

body.landing #footer {
  background-color: rgba(29, 36, 42, 0.9);
}

body.is-mobile.landing #page-wrapper {
  background: none;
}

body.is-mobile.landing #banner,
body.is-mobile.landing .wrapper.style4 {
  background-image: -moz-linear-gradient(
      top,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../../images/banner.jpg");
  background-image: -webkit-linear-gradient(
      top,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../../images/banner.jpg");
  background-image: -ms-linear-gradient(
      top,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../../images/banner.jpg");
  background-image: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../../images/banner.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}

body.is-mobile.landing #footer {
  background-color: #1d242a;
}

.profile-pic {
  height: 300px;
  width: 400px;
  border-radius: 20px;
}

/* .inner2 > p {
  padding: 0 5px;
} */

